# BTAudio

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  app-info.md  check-bundle.html  connecttest.html  index.html  index2.html  installer.html  installer2-debug  installer2.html  launchpad.toml  partitions.csv  previousindex.html  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sparkfun.html  test.html
components/: README.md
components/ads1115/: CMakeLists.txt  README.md  ads1115.c
components/ads1115/include/: ads1115.h
components/audio_board/: CMakeLists.txt  Kconfig.projbuild  README.md
components/audio_board/include/: board_pins_config.h
components/audio_board/my_board_v1_0/: CMakeLists.txt  board.c  board.h  board_def.h  board_pins_config.c
components/bd37033/: CMakeLists.txt  README.md  bd37033.c
components/bd37033/include/: bd37033.h
components/mongoose/: CMakeLists.txt  README.md  mongoose_fs.c  mongoose_glue.c  mongoose_impl.c  mongoose_wizard.json
components/mongoose/include/: mongoose_glue.h
components/ws2812/: CMakeLists.txt  README.md  ws2812.c
components/ws2812/include/: ws2812.h
main/: CMakeLists.txt  README.md  adc_manager.c  adc_manager.h  bt_audio.c  bt_audio.h  device_info.c  device_info.h  main.c
webflash/: manifest.json
