idf_component_register(
    SRCS
        "main.c"
        "bt_audio.c"
        "device_info.c"
    INCLUDE_DIRS
        "" 
    REQUIRES
        ads1115
        bd37033
        mongoose
        ws2812
        bt
        bluetooth_service
        audio_pipeline
        audio_stream
        audio_hal
        nvs_flash
        driver
)
